# polymarket-rust

./: Cargo.toml  README.md
src/: lib.rs
src/client/: api.rs  contract.rs  mod.rs  order.rs  types.rs  ws.rs
