[package]
name = "polymarket"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.42"
hmac = "0.12.1"
lazy_static = "1.5.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
tungstenite = "0.28.0"

futures = "0.3.31"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["sync", "rt", "macros", "time", "full"] }
tracing = "0.1.41"
alloy = { version = "1.0.41", features = ["full", "json-rpc", "eip712", "rand"] }
num-traits = "0.2.19"
uuid = { version = "1.18.1", features = ["serde", "v4"] }

